<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="car"
            type="com.ar.pablo.domain.model.Car" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_info"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/car_thumbnail"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="false"
                    android:background="@drawable/background_2"
                    android:contentDescription="@string/vehicle_image"
                    app:image_url="@{car.vehicleTypeImageUrl}"
                    app:layout_constraintDimensionRatio="h,4:3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TableLayout
                    android:id="@+id/description_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:stretchColumns="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/car_thumbnail">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="#000000">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_column="0"
                            android:layout_margin="1dp"
                            android:background="#FFFFFF"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/title"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            app:text="@{car.title}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="1dp"
                        android:background="#000000">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_column="0"
                            android:layout_margin="1dp"
                            android:background="#FFFFFF"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/licence_plate"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            app:text="@{car.licencePlate}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="1dp"
                        android:background="#000000">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_column="0"
                            android:layout_margin="1dp"
                            android:background="#FFFFFF"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/fuel"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_column="1"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            app:text="@{car.fuelLevel.toString()}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="1dp"
                        android:background="#000000">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_column="0"
                            android:layout_margin="1dp"
                            android:background="#FFFFFF"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/pricing_time"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_column="1"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:text="@{car.pricingTime.toString()}"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="1dp"
                        android:background="#000000">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_column="0"
                            android:layout_margin="1dp"
                            android:background="#FFFFFF"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/pricing_parking"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_column="1"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            app:text="@{car.pricingParking.toString()}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="1dp"
                        android:background="#000000">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_column="0"
                            android:layout_margin="1dp"
                            android:background="#FFFFFF"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/city"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_column="1"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            app:text="@{car.city}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="1dp"
                        android:background="#000000">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_column="0"
                            android:layout_margin="1dp"
                            android:background="#FFFFFF"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/zip_code"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_column="1"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            app:text="@{car.zipCode.toString()}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="1dp"
                        android:background="#000000">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_column="0"
                            android:layout_margin="1dp"
                            android:background="#FFFFFF"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/address"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_column="1"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            app:text="@{car.address}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="1dp"
                        android:background="#000000">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_column="0"
                            android:layout_margin="1dp"
                            android:background="#FFFFFF"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/damage_description"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_column="1"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            app:text="@{car.damageDescription}" />
                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/btn_rent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/rent"
                    android:textColor="#FFFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_table" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>